# clog

./: CMakeLists.txt  Makefile
examples/: example1.c
include/: log.h
include/clog/: core.h  log.h
src/log/: log.c
test/: main.c
